...
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="placeholder_title">TITLE</string>
    <string name="login_register">Login/Register</string>
    <string name="updated_time">Updated %1$s by %2$s</string>
    <string name="written_by_username">Written by %s</string>
    <string name="action_save">Save</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_story">Story</string>
    <string name="prompt_tags">Tags</string>
    <string name="action_add_media">Add Image</string>
    <string name="already_logged">All ready logged in</string>
    <string name="comment">Comment</string>
...
    <string name="no_connection">There is no Internet connection.</string>
    <string name="user_exist">This user already exists.</string>
    <string name="user_not_exist">This user does not exist.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="error_occurred">An error occurred</string>
    <string name="access_toke_error">Your session is ended. Please log in again.</string>
    <string name="action_edit">Edit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="action_delete">Delete</string>
    <string name="deleted">The story is deleted.</string>
    <string name="delete_message">Do you want to delete this story?</string>
...
